# monkeyterm

./: Cargo.toml  README.md  flake.nix
src/: main.rs
src/app/: mod.rs
src/config/: mod.rs
src/history/: mod.rs
src/themes/: mod.rs
src/ui/: home.rs  mod.rs  results.rs  settings.rs  theme_picker.rs  typing.rs  widgets.rs
src/words/: mod.rs
