[package]
name = "monkeyterm"
version = "0.1.0"
edition = "2024"
description = "A terminal typing test application inspired by MonkeyType"
authors = []

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
unicode-width = "0.2"
anyhow = "1"
directories = "5"

[profile.release]
opt-level = 3
strip = true
